# cpp-from-the-sky-down

./: .gitignore  CMakeLists.txt
Presentations/: SPL - Presentation.pptx
Presentations/cppnow2026/: CMakeLists.txt  presentation.cpp  spl.md  spl_presentation.html
cmake/: SkydownConfig.cmake.in
spl/: AGENTS.md  CMakeLists.txt  README.md  main.cpp
spl/benchmarks/: CMakeLists.txt  benchmarks.cpp
spl/example/: CMakeLists.txt  example_basics.cpp  example_compose.cpp  example_constexpr.cpp  example_flatten.cpp  example_generators.cpp  example_grouping.cpp  example_merge_intervals.cpp  example_optional.cpp  example_pythagorean.cpp  example_sushi_for_two.cpp  example_zip.cpp  main.cpp
spl/include/spl/: spl.h  spl_core.h
spl/tests/: CMakeLists.txt  tests.cpp
