cmake_minimum_required(VERSION 3.24)
project(SkydownSplSuperBuild LANGUAGES CXX)

enable_testing()

include(FetchContent)
FetchContent_Declare(
        googletest
        GIT_REPOSITORY https://github.com/google/googletest.git
        GIT_TAG        v1.17.0
)
FetchContent_MakeAvailable(googletest)


add_subdirectory(library)
add_subdirectory(example)
add_subdirectory(tests)
